--- a/src/rsrc.rc
+++ b/src/rsrc.rc
@@ -1,1 +1,1 @@
-500 ICON MOVEABLE PURE LOADONCALL DISCARDABLE "E:/DevCpp/Icon/MAINICON.ICO"
+500 ICON MOVEABLE PURE LOADONCALL DISCARDABLE "E:/Dev-C++/Icon/MAINICON.ICO"
